--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -213,6 +213,10 @@ table .radio {
 .cube-detail {
   background-color: white;
 }
+.model-detail {
+  background-color: white;
+}
+
 
 /* Query content */
 .query-content {
@@ -316,7 +320,7 @@ pre {
 }
 
 //cube graph
-.cube_graph {
+.model_graph {
   svg {
     width: auto;
     height: auto;
