--- a/webapp/app/partials/header.html
+++ b/webapp/app/partials/header.html
@@ -43,8 +43,8 @@
                     <li class="{{activeTab=='query'?'purple':'green'}}" ng-if="userService.isAuthorized()">
                         <a href="query">Insight</a>
                     </li>
-                    <li class="{{activeTab=='cubes'?'purple':'green'}}" ng-if="userService.isAuthorized()">
-                        <a href="cubes">Model</a>
+                    <li class="{{activeTab=='models'?'purple':'green'}}" ng-if="userService.isAuthorized()">
+                        <a href="models">Model</a>
                     </li>
                     <li class="{{activeTab=='jobs'?'purple':'green'}}" ng-if="userService.isAuthorized()">
                         <a href="jobs">Monitor</a>
