--- a/webapp/app/partials/header.html
+++ b/webapp/app/partials/header.html
@@ -49,8 +49,8 @@
                     <li class="{{activeTab=='jobs'?'purple':'green'}}" ng-if="userService.isAuthorized()">
                         <a href="jobs">Monitor</a>
                     </li>
-                    <li class="{{activeTab=='sourceMeta'?'purple':'green'}}" ng-if="userService.isAuthorized()">
-                        <a href="sourceMeta">System</a>
+                    <li class="{{activeTab=='admin'?'purple':'green'}}" ng-if="userService.isAuthorized()">
+                        <a href="admin">System</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
