--- a/webapp/app/partials/login.html
+++ b/webapp/app/partials/login.html
@@ -46,7 +46,7 @@
                                     <span>
 
                                         <select  ng-required="projectModel.projects.length" chosen ng-model="projectModel.selectedProject" ng-init="newAccess.permission=permissions.READ.value;"
-                                                ng-options="project as project for project in projectModel.projects "
+                                                ng-options="project.name as project.name for project in projectModel.projects "
                                                 style="width: 100% !important;"
                                                 data-placeholder="select a project"
                                                 class="chosen-select">
