--- a/webapp/app/partials/modelDesigner/model_dimensions.html
+++ b/webapp/app/partials/modelDesigner/model_dimensions.html
@@ -20,7 +20,7 @@
 
 <!-- Dimensions Summary -->
 <div class="dataTables_wrapper form-inline no-footer">
-    <div class="row"  ng-if="state.mode=='view'">
+    <div class="row"  ng-if="state.mode=='view'&&model.dimensions.length > 0">
         <div class="col-xs-6">
             <b>Dimensions</b>
         </div>
