--- a/webapp/app/partials/modelDesigner/model_measures.html
+++ b/webapp/app/partials/modelDesigner/model_measures.html
@@ -19,7 +19,7 @@
 <!-- Measures Summary -->
 <div class="dataTables_wrapper form-inline no-footer">
 
-    <table ng-if="state.mode=='view'" class="table table-striped table-hover">
+    <table ng-if="state.mode=='view'&&model.metrics.length > 0" class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>ID</th>
