--- a/webapp/app/partials/tables/source_table_tree.html
+++ b/webapp/app/partials/tables/source_table_tree.html
@@ -16,7 +16,7 @@
 * limitations under the License.
 -->
 
-<div class="tree-border">
+<div class="tree-border" ng-controller="SourceMetaCtrl">
     <div class="row">
         <div class="col-xs-7">
             <h3 class="text-info">Tables</h3>
