--- a/webapp/app/partials/cubeDesigner/overview.html
+++ b/webapp/app/partials/cubeDesigner/overview.html
@@ -23,8 +23,8 @@
                 <tbody>
                     <!--Project Name-->
                     <tr>
-                        <th>Project Name</th>
-                        <td>{{cubeMetaFrame.project}}</td>
+                        <th>Model Name</th>
+                        <td>{{metaModel.model.name}}</td>
                     </tr>
                     <!--Cube Name-->
                     <tr>
@@ -34,7 +34,7 @@
                     <!--Fact Table-->
                     <tr>
                         <th>Fact Table</th>
-                        <td class="tb-breakword">{{cubeMetaFrame.fact_table}}</td>
+                        <td class="tb-breakword">{{metaModel.model.fact_table}}</td>
                     </tr>
                     <!--Lookup Table-->
                     <tr>
