--- a/webapp/app/partials/cubes/cubes.html
+++ b/webapp/app/partials/cubes/cubes.html
@@ -107,7 +107,7 @@
                         <li ng-if="cube.status=='DISABLED' && userService.hasRole('ROLE_ADMIN') ">
                             <a ng-click="dropCube(cube)" tooltip="Drop the cube, related jobs and data permanently.">Drop</a></li>
                         <li ng-if="cube.status=='DISABLED' && (userService.hasRole('ROLE_ADMIN') || hasPermission(cube, permissions.ADMINISTRATION.mask, permissions.MANAGEMENT.mask))">
-                            <a href="cubes/edit/{{cube.name}}">Edit</a></li>
+                            <a ng-click="cubeEdit(cube);">Edit</a></li>
                         <li><a ng-click="startJobSubmit(cube);">Build</a></li>
                         <li><a ng-click="startRefresh(cube)">Refresh</a></li>
                         <li><a ng-click="startMerge(cube)">Merge</a></li>
