KYLIN-785 improve user experience when loading models

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -950,6 +950,9 @@ Angular 1.2.0 Animation
   font-size: 13px;
   color: #3a87ad;
 }
+ul.abn-tree li.abn-tree-row a{
+ word-break: break-all;
+}
 .model-design .btn-box-tool{
   font-size: 13px !important;
 }
