--- a/webapp/app/partials/modelDesigner/model_dimensions.html
+++ b/webapp/app/partials/modelDesigner/model_dimensions.html
@@ -21,21 +21,9 @@
    <ng-form name="forms.model_dimensions_form" novalidate>
     <!-- Dimensions Summary -->
     <div class="dataTables_wrapper form-inline no-footer">
-        <div class="row"  ng-if="state.mode=='view'&&modelsManager.selectedModel.dimensions.length > 0">
-            <div class="col-xs-6">
-                <b>Dimensions</b>
-            </div>
-            <div class="col-xs-6">
-                <span class="pull-right input-icon input-icon-right nav-search" style="margin-left: 22px;">
-                    <input type="text" placeholder="Filter ..." class="nav-search-input" ng-model="dimState.filter"/>
-                    <i class="ace-icon fa fa-search nav-search-icon"></i>
-                </span>
-            </div>
-        </div>
-
          <!-- VIEW MODE -->
-        <div class="row">
-            <table class="table table-striped table-hover" ng-if="state.mode=='view'&&modelsManager.selectedModel.dimensions.length > 0">
+        <div class="row"  ng-if="state.mode=='view'&&modelsManager.selectedModel.dimensions.length > 0">
+            <table class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>ID</th>
