KYLIN-792 ,add performance module

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -605,3 +605,20 @@ ul.messenger .messenger-message-inner ,.ngCellText{
   max-height: 300px;
   overflow-y: auto;
 }
+
+.dashboard_wrapper{
+  min-height: 100%;
+  background-color: #ecf0f5;
+  z-index: 800;
+}
+
+
+.size-h1{font-size:36px}
+.size-h2{font-size:30px}
+.size-h3{font-size:24px}
+.size-h4{font-size:18px}
+
+.text-muted {
+  color: #777;
+}
+.tick line {display: none;}
