--- a/webapp/app/partials/admin/admin.html
+++ b/webapp/app/partials/admin/admin.html
@@ -71,6 +71,9 @@
             <a class="label-lg label-yellow arrowed-right"style="font-size:18px;" tooltip="Cluster Resource Monitoring" href="{{config.reference_links['hadoop'].link}}" >
                 Hadoop Monitor
             </a>
+            <a href="dashboard">
+                Dashboard
+            </a>
         </div>
     </div>
 </div>
