--- a/docs/website/_includes/header.cn.html
+++ b/docs/website/_includes/header.cn.html
@@ -39,8 +39,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-     <li><a href="/cn"><b>首页</b></a></li>
-          <li><a href="/docs" >文档</a></li>
+     <li><a href="/cn">首页</a></li>
+          <li><a href="/cn/docs" >文档</a></li>
           <li><a href="/community" >社区</a></li>
           <li><a href="/blog">博客</li>
           <li><a href="/download">下载</li>
