--- a/docs/website/_layouts/post-blog.html
+++ b/docs/website/_layouts/post-blog.html
@@ -1,5 +1,5 @@
 ---
-layout: docs
+layout: blog
 ---
 
 <!--
@@ -20,7 +20,7 @@ layout: docs
 * limitations under the License.
 -->
 
-<div class="post" style=" padding:1.5em 4em 4em 4em">
+<div class="post" style=" padding:2em 4em 4em 4em">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
