--- a/docs/website/_includes/header.html
+++ b/docs/website/_includes/header.html
@@ -44,7 +44,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-     <li><a href="/"><b>Home</b></a></li>
+     <li><a href="/">Home</a></li>
           <li><a href="/docs" >Docs</a></li>
           <li><a href="/community" >Community</a></li>
           <li><a href="/blog">Blog</li>
