--- a/docs/website/_layouts/blog.html
+++ b/docs/website/_layouts/blog.html
@@ -1,7 +1,3 @@
----
-layout: docs
----
-
 <!--
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
@@ -19,19 +15,30 @@ layout: docs
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
+<!doctype html>
+<html>
+	{% include head.html %}
+	<body>
+		{% include header.html %}
+		<div class="page-content">
+			<header style=" padding:2em 0 0 0">
+			<div class="container" >
+				<h4 class="section-title"><span>Kylin Technical Blog</span></h4>
+			</div>
+		</div>
 
-<div class="post" style=" padding:1.5em 4em 4em 4em">
+		<div class="container">
+			<div>
+				{{ content }}
+			</div>
+		</div>		
+		{% include footer.html %}
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta" >{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content" >
-    {{ content }}
-  </article>
-
-</div>
+	<script src="/assets/js/jquery-1.9.1.min.js"></script> 
+	<script src="/assets/js/bootstrap.min.js"></script> 
+	<script src="/assets/js/main.js"></script>
+	</body>
+</html>
 
 
 
