--- a/docs/website/_layouts/docs-cn.html
+++ b/docs/website/_layouts/docs-cn.html
@@ -1,7 +1,3 @@
----
-layout: docs
----
-
 <!--
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
@@ -20,19 +16,28 @@ layout: docs
 * limitations under the License.
 -->
 
-<div class="post" style=" padding:1.5em 4em 4em 4em">
+<!doctype html>
+<html>
+	{% include head.cn.html %}
+	<body>
+		{% include header.cn.html %}
+		
+		<div class="container">
+			<div class="row">
+				{% include navside.cn.html %}
+				<div class="col-md-9 col-lg-9 col-xs-14 aside2">
+					<div id="container">
+						<div id="pjax">
+							{{ content }}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>		
+		{% include footer.html %}
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta" >{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content" >
-    {{ content }}
-  </article>
-
-</div>
-
-
-
-
+	<script src="/assets/js/jquery-1.9.1.min.js"></script> 
+	<script src="/assets/js/bootstrap.min.js"></script> 
+	<script src="/assets/js/main.js"></script>
+	</body>
+</html>
