--- a/docs/website/assets/css/docs.css
+++ b/docs/website/assets/css/docs.css
@@ -103,4 +103,24 @@
   color: #666666;
 }
 
+.nside {
+  color: #fb8d08;
+}
+
+.nnav {
+  font-weight: 600;
+}
+
+.nnav-home {
+  font-weight: 200;
+}
+
+#navtitle {
+  color:#454545;
+}
+
+#navtitle:hover, #navtitle:focus{
+  color:#000000;
+}
+
 
