KYLIN-818, measure returntype support integer ,and add start/end time to hbase tab in cube,enhance UI in query page

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -550,7 +550,7 @@ ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-mess
 }
 
 /** Enable the text selectable on notification of Messenger **/
-ul.messenger .messenger-message-inner {
+ul.messenger .messenger-message-inner ,.ngCellText{
   -moz-user-select: text;
   -webkit-user-select: text;
   -o-user-select: text;
