KYLIN-811 ,enhance query page UI,grid selectable and resize select box

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -381,14 +381,7 @@ pre {
   background: url("../image/icon_table.png") no-repeat;
 }
 
-//input.ng-invalid-required {
-//  border: 1px solid #dd4b39;
-//}
-//
-//input.ng-invalid-required:after {
-//  content: "*";
-//  color: red;
-//}
+
 
 .nav-pills>li {
 cursor: pointer;
@@ -554,12 +547,13 @@ ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-mess
 }
 
 /** Enable the text selectable on notification of Messenger **/
-ul.messenger .messenger-message-inner {
+ul.messenger .messenger-message-inner,.ngCellText {
   -moz-user-select: text;
   -webkit-user-select: text;
   -o-user-select: text;
   user-select: text;
 }
+
 
 .load-hive-metawrapper input[type="radio"]{
   margin-left:0px !important;
