--- a/webapp/app/less/layout.less
+++ b/webapp/app/less/layout.less
@@ -19,8 +19,14 @@
   padding-top: 45px;
 }
 
+body{
+  overflow: auto !important;
+  min-width: 960px;
+
+}
 .main-container {
   padding-bottom: 45px;
+  min-width: 960px;
 }
 
 .main-content {
