--- a/webapp/app/partials/query/query_detail.html
+++ b/webapp/app/partials/query/query_detail.html
@@ -59,7 +59,7 @@
             <span class="label label-lg label-info" ng-if="curQuery.status=='executing'">
                 <i class="fa fa-cog fa-spin"></i> Executing...</span>
         </li>
-        <li class="col-md-3 " style="display: inline">
+        <li class="col-md-5 " style="display: inline">
             <label>Project: &nbsp;</label>
             <span>{{curQuery.project}}</span>
         </li>
@@ -126,7 +126,7 @@
     </div>
 
     <div ng-if="curQuery.graph.show" class="row">
-        <div class="col-xs-2">
+        <div class="col-xs-4 col-lg-3">
             <div class="graph_content">
                 <label>Graph Type</label>
 
@@ -139,7 +139,7 @@
                 <label>Dimensions</label>
                 <div>
                     <select
-                            chosen style="width: 100%"
+                            chosen style="width: 100%;"
                             ng-model="curQuery.graph.state.dimensions" ng-change="refreshGraphData(curQuery)"
                             ng-options="dimension as dimension.column.label for dimension in curQuery.graph.meta.dimensions | filter: mappingToChartype">
                         <option value="">-- choose dimension --</option>
@@ -152,7 +152,7 @@
 
                 <div>
                     <select ng-if="curQuery.graph.type.metrics.multiple"
-                            chosen style="width: 100%"
+                            chosen style="width: 100%;"
                             multiple
                             data-placeholder="Select Metrics.."
                             ng-model="curQuery.graph.state.metrics"
@@ -172,7 +172,7 @@
             </div>
         </div>
 
-        <div class="col-xs-10">
+        <div class="col-xs-8 col-lg-9">
             <div ng-if="curQuery.graph.data.length > 0">
                 <div ng-if="curQuery.graph.type.value == 'bar'">
                     <nvd3-multi-bar-chart
