add world-break for tbody

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -512,7 +512,7 @@ background-color:#ffffff;
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
-.tb-breakword{
+.table>tbody{
     word-break:break-all;
     word-wrap:break-word;
 }
