--- a/webapp/app/partials/cubeDesigner/overview.html
+++ b/webapp/app/partials/cubeDesigner/overview.html
@@ -29,17 +29,17 @@
                     <!--Cube Name-->
                     <tr>
                         <th>Cube Name</th>
-                        <td class="tb-breakword">{{cubesManager.cubeMetaFrame.name}}</td>
+                        <td>{{cubesManager.cubeMetaFrame.name}}</td>
                     </tr>
                     <!--Fact Table-->
                     <tr>
                         <th>Fact Table</th>
-                        <td class="tb-breakword">{{metaModel.model.fact_table}}</td>
+                        <td>{{metaModel.model.fact_table}}</td>
                     </tr>
                     <!--Lookup Table-->
                     <tr>
                         <th>Lookup Table</th>
-                        <td class="tb-breakword">
+                        <td>
                             {{metaModel.model.lookups.length}}
                         </td>
                     </tr>
