update download page with kylin-0.7.1-incubating download links

--- a/docs/website/_layouts/download-cn.html
+++ b/docs/website/_layouts/download-cn.html
@@ -19,11 +19,11 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include head.cn.html %}
 
   <body>
 
-    {% include header.html %}
+    {% include header.cn.html %}
 
     <div class="page-content">
       <div class="wrapper">
