--- a/docs/website/_includes/header.cn.html
+++ b/docs/website/_includes/header.cn.html
@@ -43,7 +43,7 @@
           <li><a href="/cn/docs" >文档</a></li>
           <li><a href="/community" >社区</a></li>
           <li><a href="/blog">博客</li>
-          <li><a href="/download">下载</li>
+          <li><a href="/cn/download">下载</li>
           <li><a href="/about" >关于</a></li>
           <li><a href="/" >English</a></li>
           <li><a href="https://twitter.com/apachekylin" target="_blank" class="fa fa-twitter fa-lg" title="Twitter: @ApacheKylin" ></a></li>
