KYLIN-792,alert style beautify

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -856,3 +856,60 @@ span.input-icon {
   margin-top: 0px !important;
   margin-bottom: 0px !important;
 }
+
+
+//style choosen for bootstrap3
+.chosen-container-single .chosen-single {
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid #CCCCCC;
+}
+.chosen-container-single .chosen-single span {
+  padding-top: 2px;
+}
+.chosen-container-single .chosen-single div b {
+  margin-top: 2px;
+}
+.chosen-container-active .chosen-single,
+.chosen-container-active.chosen-with-drop .chosen-single {
+  border-color: #ccc;
+  border-color: rgba(82, 168, 236, .8);
+  outline: 0;
+  outline: thin dotted \9;
+  -moz-box-shadow: 0 0 8px rgba(82, 168, 236, .6);
+  box-shadow: 0 0 8px rgba(82, 168, 236, .6)
+}
+
+
+//override callout info in AdinLTE.css
+.callout {
+  margin: 0 0 20px 0 !important;
+  padding: 15px 30px 15px 15px !important;
+  border-left: 5px solid #eee !important;
+  color: black !important;
+}
+
+.callout.callout-info {
+  background-color: #f0f7fd !important;
+  border-color: #d0e3f0 !important;
+  color: black !important;
+}
+
+.callout.callout-danger {
+  background-color: #fcf2f2  !important;
+  border-color: #dFb5b4  !important;
+  color: black !important;
+}
+
+.callout.callout-warning {
+  background-color: #fefbed !important;
+  border-color: #f1e7bc !important;
+  color: black !important;
+}
+
+ul.messenger-theme-ice .messenger-message{
+  color:#666667 !important;
+}
+.messenger-message.alert{
+  background-color: #f6f6f6 !important;
+}
